2000-10-09  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* numbers.c (big2str):  Avoid redundant copying.

	(scm_bigprint):  Use SCM_STRING_LENGTH instead of SCM_LENGTH.

2000-10-06  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* numbers.c (big2str), read.c (scm_grow_tok_buf), strports.c
	(st_resize_port):  Don't call scm_vector_set_length_x to resize
	strings.

	* read.c (scm_lreadr, scm_read_token):  Use SCM_STRING_LENGTH for
	string arguments (instead of SCM_LENGTH).

2000-10-06  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* continuations.h (SCM_CONTINUATION_LENGTH), strings.h
	(SCM_STRING_LENGTH), symbols.h (SCM_SYMBOL_LENGTH), unif.h
	(SCM_UVECTOR_LENGTH, SCM_BITVECTOR_LENGTH), vectors.h
	(SCM_VECTOR_LENGTH):  Added as replacements for SCM_LENGTH.

2000-10-02  Marius Vollmer  <mvo@zagadka.ping.de>

	* coop-defs.h (coop_key_create): Don't use the C++ keyword
	`destructor' in prototype.  Thanks to Martin Baulig!

2000-10-02  Michael Livshin  <mlivshin@bigfoot.com>

	* guile-func-name-check.in: now should not confuse SCO nawk
	anymore.  thanks to Bruce Korb for the fix!

2000-10-01  Gary Houston  <ghouston@arglist.com>

	* net_db.c: declare inet_aton only if HAVE_INET_ATON is not
	defined.  thanks to Han-Wen Nienhuys.

2000-09-30  Gary Houston  <ghouston@arglist.com>

	* filesys.c (scm_stat2scm), posix.c (s_scm_mknod): don't use
	S_ISSOCK or S_IFSOCK if not defined.  thanks to Bruce Korb.

2000-09-29  Neil Jerram  <neil@ossau.uklinux.net>

	* Makefile.am (guile-procedures.txt): Insert a new rule such that
	the output from guile-snarf.awk is processed by makeinfo to
	produce guile-procedures.txt.

	* guile-snarf.awk.in: Modify the way we snarf docstrings such that
	the output is Texinfo-compliant and suitable for post-processing
	with makeinfo.  (Trim leading "./" from C file name if
	present; reformat procedure prototype line in @deffn format;
	improve representation of args to show optional and rest args;
	explicitly quote quotation marks where they are used inside an AWK